styles/styles.css
/* ... */
.popup__amount-row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.popup__input {
  width: 30px;
  border-style: none;
  outline-offset: 0;
  outline: 3px solid transparent;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  background: inherit;
  text-align: center;
}

.popup__amount-row label {
  margin-right: 46px;
}


.popup__form label {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.popup__form input {
  font-family: "PT Sans", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
}

.popup__form input:disabled {
  color: rgba(0, 0, 0, 0.3);
}

.popup__error {
  font-size: 16px;
  line-height: 21px;
  color: #FF5757;
  display: none;
  margin-left: 20px;
}

.popup__allow {
  font-size: 16px;
  line-height: 21px;
  color: #333333;
  display: none;
  margin-left: 20px;
}

.popup-notification-toggle {
  display: block;
}

.tooltip__text {
  font-size: 16px;
  line-height: 20px;
  color: #fff;
  background-color: #333333;
  display: none;
  position: absolute;
  padding: 15px 18px 18px 22px;
  border-radius: 10px;
  -webkit-box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  width: 256px;
  font-weight: 400;
  top: 43px;
  right: -110px;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.tooltip__text:before {
  content: '';
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  background: #333333;
  position: absolute;
  top: -9px;
  left: 122px;
}

.tooltip {
  position: relative;
}

.tooltip-img {
  vertical-align: bottom;
  fill: #83B3D3;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.tooltip-img:hover {
  fill: #68A2CA;
}

.tooltip__button {
  cursor: pointer;
  outline: none;
  border: none;
  background: transparent;
  width: 26px;
  height: 26px;
  padding: 0;
  margin-left: 10px;
}

.inner-header__title {
  font-weight: 700;
  font-size: 60px;
  line-height: 78px;
  margin-bottom: 8px;
}

.breadcrumbs {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0 40px 0;
}

.breadcrumbs__link {
  color: inherit;
  text-decoration: none;
  font-size:16px;
  line-height: 21px;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.catalog-filter__title {
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  margin-bottom: 32px;
}

.catalog-filter__item:not(:last-child) {
  margin-bottom: 16px;
}

.control {
  font-family: "PT Sans", sans-serif ;
  font-size: 18px;
  line-height: 23px;
  position: relative;
  padding-left: 36px;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.control__mark {
  position: absolute;
  top: 2px;
  left: 0;
  width: 20px;
  height: 20px;
  background: #fff;
}

.catalog-filter__list--checkbox .control__mark {
  border-radius: 4px;
}

.catalog-filter__list--radio .control__mark {
  border-radius: 50%;
}

.control:hover {
  opacity: 0.6;
}

.control:focus {
  outline: none;
}

.control:hover .control__mark {
  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
}

.control:focus .control__mark {
  outline: 3px solid #83B3D3;
  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
}

.control:active .control__mark {
  outline: 2px solid #83B3D3;
  -webkit-box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.4);
  box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.4);
}

.control:active {
  opacity: 0.3;
}

.catalog-filter__list--checkbox .control__input[type="checkbox"]:checked + .control__mark::before {
  background-image: url("../images/icons/icon_tick.svg");
  width: 12px;
  height: 10px;
  position: absolute;
  top: 5px;
  left: 4px;
  content: "";

}

.catalog-filter__list--radio .control__input[type="radio"]:checked + .control__mark::before {
  border-radius: 50%;
  background: #3F5E72;;
  width: 10px;
  height: 10px;
  position: absolute;
  top: 5px;
  left: 5px;
  content: "";
}

.price-input {
  font-family: "PT Sans", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  color: #000;
  padding: 12px 20px;
  border-style: none;
  outline-offset: 0;
  outline: none;
  background: #fff;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
  width: 143px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.price-input:hover {
  background: #E6E6E6;
}

.price-input:focus {
  outline: 3px solid #83B3D3;
}

.price-input:active {
  outline: 3px solid #000;
}

.price-input:disabled {
  color: rgba(0, 0, 0, 0.3);
}

.price-input::-webkit-input-placeholder{
  color: rgba( 0 0 0 0.6)
}

.price-input::-moz-placeholder{
  color: rgba( 0 0 0 0.6)
}

.price-input:-ms-input-placeholder{
  color: rgba( 0 0 0 0.6)
}

.price-input::-ms-input-placeholder{
  color: rgba( 0 0 0 0.6)
}

.price-input::placeholder{
  color: rgba( 0 0 0 0.6)
}

.price-input:nth-of-type(1) {
  border-radius: 4px 0 0 4px;
  margin-right: 2px;
}

.price-input:nth-of-type(2) {
  border-radius: 0 4px 4px 0;
}

.catalog-filter__cost {
  color: rgba(0, 0, 0, 0.4);
  position: absolute;
}

.catalog-filter__cost:nth-of-type(1) {
  left: 108px;
  top: 12px;
}

.catalog-filter__cost:nth-of-type(2) {
  right: 20px;
  top: 12px;
}
/* ... */

